--- a/packages/website/src/sass/components/_footer.sass
+++ b/packages/website/src/sass/components/_footer.sass
@@ -54,10 +54,11 @@
   padding: 0 8px
   color: $white
 
-  &:hover
-    border-color: $white
-  &:focus-visible
-    border-color: $white
+.footer__link:hover
+  border-color: $white
+
+.footer__link:focus-visible
+  border-color: $white
 
 .footer__link--active,
 .footer__link:active
@@ -94,15 +95,15 @@
   color: inherit
   transition: $all
 
-  &:hover
-    color: $white
+.copyrights__link:hover
+  color: $white
 
-  &:focus-visible
-    color: $white
+.copyrights__link:focus-visible
+  color: $white
 
-  &:active
-    color: $white
-    opacity: 0.9
+.copyrights__link:active
+  color: $white
+  opacity: 0.9
 
 .copyrights__rights
   color: transparentize($white, 0.5)
