--- a/packages/website/src/sass/components/_header.sass
+++ b/packages/website/src/sass/components/_header.sass
@@ -71,13 +71,13 @@
     user-select: none
     transition: $all
 
-  &:hover
-    &::before
-      opacity: 1
+.header__burger:hover
+  &::before
+    opacity: 1
 
-  &:focus-visible
-    &::before
-      opacity: 1
+.header__burger:focus-visible
+  &::before
+    opacity: 1
 
 .header__burger-lines
   display: flex
