--- a/packages/website/src/sass/components/_slider.sass
+++ b/packages/website/src/sass/components/_slider.sass
@@ -29,14 +29,14 @@
   cursor: pointer
   transition: $all
 
-  &:hover
-    filter: grayscale(0)
+.slider__link:hover
+  filter: grayscale(0)
 
-  &:focus-visible
-    filter: grayscale(0)
+.slider__link:focus-visible
+  filter: grayscale(0)
 
-  &:active
-    filter: grayscale(0) brightness(0.9)
+.slider__link:active
+  filter: grayscale(0) brightness(0.9)
 
 .slider__column
   display: flex
