--- a/packages/website/src/sass/sections/_section-about.sass
+++ b/packages/website/src/sass/sections/_section-about.sass
@@ -38,13 +38,15 @@
   margin: 0 auto
   transition: $all
 
-  &:hover
-    color: $purple
-  &:focus-visible
-    color: $purple
-  &:active
-    color: $purple
-    filter: brightness(0.9)
+.about__link:hover
+  color: $purple
+
+.about__link:focus-visible
+  color: $purple
+
+.about__link:active
+  color: $purple
+  filter: brightness(0.9)
 
 .about__loop-text
   margin-top: 52px
@@ -87,13 +89,15 @@
   color: $purple
   transition: $all
 
-  &:hover
-    color: $white
-  &:focus-visible
-    color: $white
-  &:active
-    color: $white
-    opacity: 0.9
+.about__description-link:hover
+  color: $white
+
+.about__description-link:focus-visible
+  color: $white
+
+.about__description-link:active
+  color: $white
+  opacity: 0.9
 
 .about__socials
   margin: 84px auto 0
